--- a/AWLiveKit/Base.lproj/Main.storyboard
+++ b/AWLiveKit/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -101,6 +102,7 @@
                             <constraint firstItem="VAJ-OE-gCN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="x8w-wL-v9G"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="nbc-9l-hdp"/>
                     <connections>
                         <outlet property="infoLabel" destination="4tN-e5-Xwo" id="bBp-0a-Erm"/>
                         <outlet property="preview" destination="J5W-TL-CIx" id="Ix7-XU-fXh"/>
@@ -110,6 +112,76 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Dbh-ZS-aWZ">
+            <objects>
+                <viewController id="S0V-ZS-9eU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OlI-5O-0cp"/>
+                        <viewControllerLayoutGuide type="bottom" id="Keg-ja-DBl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Ar-tw-3LW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推流地址" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0V-xO-5n1">
+                                <rect key="frame" x="16" y="283" width="69.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="推流地址" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e7b-G5-ahU">
+                                <rect key="frame" x="16" y="318.5" width="343" height="30"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NNF-Tc-yi8"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="方向" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKo-it-buC">
+                                <rect key="frame" x="16" y="365" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8zX-t7-3Xb">
+                                <rect key="frame" x="16" y="394" width="121" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="5io-vt-B9E"/>
+                                    <constraint firstAttribute="width" constant="121" id="9iE-42-9Q6"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="横屏"/>
+                                    <segment title="竖屏"/>
+                                </segments>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPk-DX-J70">
+                                <rect key="frame" x="16" y="617" width="31" height="30"/>
+                                <state key="normal" title="开始"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="e7b-G5-ahU" firstAttribute="trailing" secondItem="6Ar-tw-3LW" secondAttribute="trailingMargin" id="EfL-9W-U4V"/>
+                            <constraint firstItem="jPk-DX-J70" firstAttribute="leading" secondItem="8zX-t7-3Xb" secondAttribute="leading" id="Ekr-tb-lHq"/>
+                            <constraint firstItem="Keg-ja-DBl" firstAttribute="top" secondItem="jPk-DX-J70" secondAttribute="bottom" constant="20" id="Er6-68-nUc"/>
+                            <constraint firstItem="8zX-t7-3Xb" firstAttribute="leading" secondItem="eKo-it-buC" secondAttribute="leading" id="O68-eu-4Jd"/>
+                            <constraint firstItem="8zX-t7-3Xb" firstAttribute="top" secondItem="eKo-it-buC" secondAttribute="bottom" constant="8" id="Xkv-Pr-OHH"/>
+                            <constraint firstItem="eKo-it-buC" firstAttribute="top" secondItem="e7b-G5-ahU" secondAttribute="bottom" constant="16.5" id="Z9a-q6-i1c"/>
+                            <constraint firstItem="e7b-G5-ahU" firstAttribute="leading" secondItem="d0V-xO-5n1" secondAttribute="leading" id="Zhu-8b-epF"/>
+                            <constraint firstItem="e7b-G5-ahU" firstAttribute="centerY" secondItem="6Ar-tw-3LW" secondAttribute="centerY" id="as3-qA-SKq"/>
+                            <constraint firstItem="e7b-G5-ahU" firstAttribute="top" secondItem="d0V-xO-5n1" secondAttribute="bottom" constant="14.5" id="eh2-ER-oef"/>
+                            <constraint firstItem="eKo-it-buC" firstAttribute="leading" secondItem="e7b-G5-ahU" secondAttribute="leading" id="rwo-9K-hzZ"/>
+                            <constraint firstItem="e7b-G5-ahU" firstAttribute="leading" secondItem="6Ar-tw-3LW" secondAttribute="leadingMargin" id="y4Q-L6-UbY"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6LK-Ta-5Xv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-735.20000000000005" y="37.331334332833585"/>
         </scene>
     </scenes>
 </document>
